name:                servant-foreign
version:             0.11.1
x-revision:          3
synopsis:            Helpers for generating clients for servant APIs in any programming language
description:
  Helper types and functions for generating client functions for servant APIs in any programming language
  .
  This package provides types and functions that collect all the data needed to generate client functions in the programming language of your choice. This effectively means you only have to write the code that "pretty-prints" this data as some code in your target language.
  .
  See the servant-js package for an example
  .
  <https://github.com/haskell-servant/servant/blob/master/servant-foreign/CHANGELOG.md CHANGELOG>
license:             BSD3
license-file:        LICENSE
author:              Servant Contributors
maintainer:          haskell-servant-maintainers@googlegroups.com
copyright:           2015-2016 Servant Contributors
category:            Servant, Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  include/*.h
  CHANGELOG.md
  README.md
bug-reports:         http://github.com/haskell-servant/servant/issues
tested-with:
  GHC==7.8.4
  GHC==7.10.3
  GHC==8.0.2
  GHC==8.2.2
  GHC==8.4.3

source-repository head
  type: git
  location: http://github.com/haskell-servant/servant.git

library
  exposed-modules:     Servant.Foreign
                     , Servant.Foreign.Internal
                     , Servant.Foreign.Inflections

  -- Bundled with GHC: Lower bound to not force re-installs
  -- text and mtl are bundled starting with GHC-8.4
  --
  -- note: mtl lower bound is so low because of GHC-7.8
  build-depends:
      base        >= 4.7     && <4.12
    , text        >= 1.2.3.0 && < 1.3

  if !impl(ghc >= 8.0)
    build-depends:
        semigroups          >=0.18.3 && <0.19

  -- Servant dependencies
  build-depends:
      servant            == 0.13.* || ==0.14.*

  -- Other dependencies: Lower bound around what is in the latest Stackage LTS.
  -- Here can be exceptions if we really need features from the newer versions.
  build-depends:
      base-compat >= 0.9.3  && <0.11
    , lens        >= 4.15.4 && <4.18
    , http-types  >= 0.12   && < 0.13

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  if impl(ghc >= 8.0)
    ghc-options: -Wno-redundant-constraints
  include-dirs: include

test-suite spec
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  ghc-options:       -Wall
  include-dirs:      include
  main-is:           Spec.hs
  other-modules:     Servant.ForeignSpec

  -- Dependencies inherited from the library. No need to specify bounds.
  build-depends:
      base
    , servant
    , servant-foreign

  -- Additonal dependencies
  build-depends:
    hspec >= 2.4.4 && <2.6

  build-tool-depends:
    hspec-discover:hspec-discover >=2.4.4 && <2.6
  default-language:  Haskell2010
