cabal-version:       2.2
name:                servant-foreign
version:             0.16.1

synopsis:            Helpers for generating clients for servant APIs in any programming language
category:            Servant, Web
description:
  Helper types and functions for generating client functions for servant APIs in any programming language
  .
  This package provides types and functions that collect all the data needed to generate client functions in the programming language of your choice. This effectively means you only have to write the code that "pretty-prints" this data as some code in your target language.
  .
  See the servant-js package for an example
  .
  <https://github.com/haskell-servant/servant/blob/master/servant-foreign/CHANGELOG.md CHANGELOG>

homepage:            http://docs.servant.dev/
bug-reports:         http://github.com/haskell-servant/servant/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Servant Contributors
maintainer:          haskell-servant-maintainers@googlegroups.com
copyright:           2015-2019 Servant Contributors
build-type:          Simple
tested-with: GHC ==8.10.7, GHC ==9.0.2, GHC ==9.2.8, GHC ==9.4.8, GHC ==9.6.4, GHC ==9.8.2, GHC ==9.10.1

extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: http://github.com/haskell-servant/servant.git

library
  exposed-modules:     Servant.Foreign
                     , Servant.Foreign.Internal
                     , Servant.Foreign.Inflections

  -- Bundled with GHC: Lower bound to not force re-installs
  -- text and mtl are bundled starting with GHC-8.4
  --
  -- note: mtl lower bound is so low because of GHC-7.8
  build-depends:
      base        >= 4.14    && < 4.21
    , text        >= 1.2.3.0 && < 2.2

  -- Servant dependencies
  build-depends:
      servant            >=0.20.2 && <0.21

  -- Other dependencies: Lower bound around what is in the latest Stackage LTS.
  -- Here can be exceptions if we really need features from the newer versions.
  build-depends:
      base-compat >= 0.10.5  && < 0.15
    , lens        >= 4.17    && < 5.4
    , http-types  >= 0.12.2  && < 0.13

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Wno-redundant-constraints

test-suite spec
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  ghc-options:       -Wall
  main-is:           Spec.hs
  other-modules:     Servant.ForeignSpec

  -- Dependencies inherited from the library. No need to specify bounds.
  build-depends:
      base
    , servant
    , servant-foreign

  -- Additional dependencies
  build-depends:
    hspec >= 2.6.0 && <2.12
  build-tool-depends:
    hspec-discover:hspec-discover >=2.6.0 && <2.12
  default-language:  Haskell2010
