cabal-version:       2.2
name:                servant-io-streams
version:             0.1

synopsis:            Servant Stream support for io-streams
category:            Servant, Web, io-streams
description:         Servant Stream support for io-streams.
  .
  Provides 'ToSourceIO' and 'FromSourceIO' instances for 'InputStream'.

homepage:            http://docs.servant.dev/
bug-reports:         http://github.com/haskell-servant/servant/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Servant Contributors
maintainer:          haskell-servant-maintainers@googlegroups.com
copyright:           2023 Servant Contributors
build-type:          Simple
tested-with: GHC ==8.6.5 || ==8.8.4 || ==8.10.2

extra-source-files:
  CHANGELOG.md

source-repository head
  type: git
  location: http://github.com/haskell-servant/servant.git

library
  exposed-modules:     Servant.IO.Streams
  build-depends:
      base        >=4.9  && <5
    , io-streams ^>=1.5
    , servant     >=0.15 && <0.20
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wall

test-suite example
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
    example
  ghc-options: -Wall -rtsopts -threaded
  build-depends:
      base
    , base-compat
    , bytestring
    , http-media
    , servant
    , servant-io-streams
    , io-streams     ^>= 1.5
    , servant-server >=0.15     && <0.20
    , servant-client >=0.15     && <0.20
    , wai            >=3.2.1.2  && <3.3
    , warp           >=3.2.25   && <3.4
    , http-client
  default-language: Haskell2010
