name:               servant-jsaddle
version:            0.16
synopsis:
  automatic derivation of querying functions for servant webservices for jsaddle

description:
  This library lets you automatically derive Haskell functions that
  let you query each endpoint of a <http://hackage.haskell.org/package/servant servant> webservice.
  .
  See <http://haskell-servant.readthedocs.org/en/stable/tutorial/Client.html the client section of the tutorial>.
  .
  <https://github.com/haskell-servant/servant/blob/master/servant-client/CHANGELOG.md CHANGELOG>

license:            BSD3
license-file:       LICENSE
author:             Servant Contributors
maintainer:         haskell-servant-maintainers@googlegroups.com
copyright:
  2014-2016 Zalora South East Asia Pte Ltd, 2016-2017 Servant Contributors

category:           Servant, Web
build-type:         Simple
cabal-version:      >=1.10
tested-with:
    GHC ==8.0.2 || ==8.2.2 || ==8.4.4 || ==8.6.5 || ==8.8.1
  , GHCJS ==8.4

homepage:           http://haskell-servant.readthedocs.org/
bug-reports:        http://github.com/haskell-servant/servant/issues
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: http://github.com/haskell-servant/servant.git

library
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall
  exposed-modules:
    Servant.Client.Internal.JSaddleXhrClient
    Servant.Client.JSaddle

  -- Bundled with GHC: Lower bound to not force re-installs
  -- text and mtl are bundled starting with GHC-8.4
  build-depends:
      base          >=4.9      && <4.14
    , bytestring    >=0.10.8.1 && <0.11
    , containers    >=0.5.7.1  && <0.7
    , mtl           >=2.2.2    && <2.3
    , text          >=1.2.3.0  && <1.3
    , transformers  >=0.5.2.0  && <0.6

  if impl(ghcjs -any)
    build-depends: ghcjs-base

  -- Servant dependencies.
  -- Strict dependency on `servant-client-core` as we re-export things.
  build-depends:    servant-client-core >=0.16 && <0.16.1
  build-depends:
      base-compat         >=0.10.5  && <0.12
    , case-insensitive    >=1.2.0.0 && <1.3
    , exceptions          >=0.10.0  && <0.11
    , ghcjs-dom           >=0.9.4.0 && <0.10
    , http-media          >=0.7.1.3 && <0.9
    , http-types          >=0.12.2  && <0.13
    , jsaddle             >=0.9.6.0 && <0.10
    , monad-control       >=1.0.2.3 && <1.1
    , semigroupoids       >=5.3.1   && <5.4
    , string-conversions  >=0.3     && <0.5
    , transformers-base   >=0.4.4   && <0.5

  if impl(ghc >=8.0)
    ghc-options: -Wno-redundant-constraints

test-suite spec
  type:             exitcode-stdio-1.0
  ghc-options:      -Wall
  default-language: Haskell2010
  hs-source-dirs:   test
  main-is:          Spec.hs

  if impl(ghcjs -any)
    build-depends:
        base
      , servant-jsaddle

  else
    other-modules:      Servant.Client.JSaddleSpec

    -- Dependencies inherited from the library. No need to specify bounds.
    build-depends:
        base
      , bytestring
      , containers
      , exceptions
      , ghcjs-dom
      , http-media
      , http-types
      , jsaddle
      , mtl
      , process
      , semigroupoids
      , servant
      , servant-client-core
      , servant-jsaddle
      , servant-server
      , string-conversions
      , text
      , wai
      , wai-cors
      , wai-extra
      , warp
      , websockets

    -- Additonal dependencies
    build-depends:
        aeson
      , hspec
      , jsaddle-warp
      , QuickCheck

    build-tool-depends: hspec-discover:hspec-discover >=2.4.4 && <2.5
